alignment fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -10,10 +10,8 @@ html, body {
 }
 
 body {
-    background-color: white;
-	font-family: 'PT Sans', sans-serif;
-    font-size: 15px;
-    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    margin: 0;
 	-webkit-font-smoothing: antialiased;
 }
 
